# guardrail-auditor

./: .gitignore  ADAPTER.md  CLAUDE.md  LIMITATIONS.md  PROTOCOL.md  README.md  SPRINTS.md  SUBMISSION.md  VISION.md  highlights.md  main.py  prompts.md  pyproject.toml
.claude/agents/: verifier.md
.github/workflows/: ci.yml
api/: __init__.py  routes.py  schemas.py
audit/: S0.md  S1.md  S2.md  S3.md  S4.md  S5.md  S5b.md  S6.md  S7.md  S8.md  db-migration.md
core/: __init__.py  compliance.py  config_source.py  db.py  pipeline.py  remediation.py  repository.py  scoring.py  tables.py
core/parsing/: __init__.py  cloudformation.py  errors.py  terraform.py
docs/: coverage_matrix.md  deck.md
future-modules/P1-finops/: EPIC.md
future-modules/P3-sre/: EPIC.md
memory/: decisions.md  lessons.md
models/: __init__.py  control.py  finding.py  remediation.py  resource.py  score.py
rules/: __init__.py  detectors.py  engine.py
tests/: conftest.py  test_api.py  test_compliance.py  test_dashboard.py  test_demo_seed.py  test_detectors.py  test_health.py  test_parsing.py  test_readme.py  test_remediation.py  test_repo_api.py  test_repo_source.py  test_schema_migration.py  test_scoring.py
tests/fixtures/clean/: clean.tf
tests/fixtures/cloudformation/: comments_only.yaml  malformed.yaml  template.json  template.yaml
tests/fixtures/detectors/: encrypted_volume.tf  multi_violation.tf  open_ssh.yaml  open_ssh_open.tf  open_ssh_restricted.tf  private_db.tf  public_db.tf  s3_policy_conditioned.tf  s3_private_versioning.tf  s3_public_acl.tf  s3_public_policy.tf  unencrypted_volume.tf
tests/fixtures/terraform/: commented_multi.tf  empty.tf  ingress_shapes.tf  malformed.tf
tests/oracle/: SOURCES.md  checkov_reference.json  manifest.yaml  test_coverage_matrix.py  test_oracle_agreement.py
tests/oracle/terragoat/: ec2.tf
tools/: coverage_matrix.py  demo_seed.py
web/: index.html
web/static/: app.js  styles.css
