[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-auditor"
version = "0.0.0"
description = "Static Terraform/CloudFormation security & compliance auditor — deterministic core, API-first."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "httpx>=0.28",
]

# Single dependency source of truth — no requirements.txt.
# Install: pip install -e ".[dev]"

[tool.setuptools]
packages = ["api", "core", "rules", "models"]
py-modules = ["main"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Keep `mypy .` scoped to source; never type-check the virtualenv or build dirs.
exclude = '(^|/)(\.venv|venv|build|dist)/'

[tool.pytest.ini_options]
testpaths = ["tests"]
