[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-auditor"
version = "0.0.0"
description = "Static Terraform/CloudFormation security & compliance auditor — deterministic core, API-first."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.10",
    "python-hcl2>=4.3",       # S1: parse Terraform HCL → dict (lark-based)
    "pyyaml>=6.0",            # S1: parse CloudFormation YAML/JSON + line marks + intrinsic tags
    "python-multipart>=0.0.20",  # S5: multipart file upload for POST /api/scans
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "httpx>=0.28",
]
oracle = [
    "checkov==3.2.334",  # S7 Part B external oracle — DEV/CI-ONLY, never a runtime dep
]

# Single dependency source of truth — no requirements.txt.
# Install: pip install -e ".[dev]"

[tool.setuptools]
packages = ["api", "core", "core.parsing", "rules", "models"]
py-modules = ["main"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design (Depends/File/...).
extend-immutable-calls = ["fastapi.Depends", "fastapi.File"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Keep `mypy .` scoped to source; never type-check the virtualenv or build dirs.
exclude = '(^|/)(\.venv|venv|build|dist)/'

[tool.pytest.ini_options]
testpaths = ["tests"]
